# FarmTrace

./: .gitignore  Anchor.toml  Anchor.toml.bak  Cargo.toml  GEMINI.md  README.md  package-lock.json  package.json  rust-toolchain.toml  temp.json  tsconfig.json
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css
app/src/components/: FarmTraceApp.tsx  MapComponent.tsx
app/src/hooks/: useFarmTrace.ts
app/src/idl/: farmtrace.json
backend/: .env.example  .gitignore  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/checks/: gee-check-access.ts  gee-test.ts  models-test.ts
backend/scripts/: getPublicKey.ts
backend/src/: index.ts  validationService.ts
backend/src/types/: earthengine.d.ts  farmtrace.d.ts
programs/farmtrace/: Cargo.toml
programs/farmtrace/src/: lib.rs
scripts/: setup.sh
tests/: farmtrace.js
