[package]
name = "farmtrace"
version = "0.1.0"
description = "EUDR Compliance Platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farmtrace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"