[package]
name = "farmtrace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farmtrace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token", "associated_token", "metadata"] }
mpl-token-metadata = { version = "5.0.0", features = ["serde"] }

[dev-dependencies]
solana-program-test = "2.1"
solana-sdk = "2.1"
spl-token = "6.0"